
        - The log command was missing '--depth' and '--exclude' options used to
          restrict revisions printed to those touching specific paths. Log now
          allows these options and uses them properly.

        - The update command previously did not clear execute permissions from
          files that had their associated 'mtn:execute' attribute cleared.

        New features

        - The `mtn_automate' lua function now correctly parses and sets
          options for executed automate commands.

        - Additional '--full' option for 'mtn db info' to display some
          statistic analysis of the date certs in the database.

	- Command line options in the EDITOR and/or VISUAL environment
	  variables are honored; for instance, EDITOR="emacs -nw"
	  works now.  (Debian bug #320565.)

        - Additional '--revision' option for 'mtn log' allows logging of
          selected sets of revisions.

        - Additional 'u:' and 'm:' selector types for selecting the revision the
          workspace was last updated from and revisions matching specified
          message globs in changelog and comment certs.

        Internal

        - Using 64 bit integer values to represent dates internally. This
          has no user visible effect.


Fri Dec 26 22:08:00 UTC 2008

        0.42 release.

        Changes

        - The output of 'automate show_conflicts' has been changed; a
          default resolution for file content conflicts and user resolutions
          for other conflict types has been added. 'directory_loop_created'
          changed to 'directory_loop'.

        - The French, Brazilian-Portuguese and Japanese translations were
          outdated and thus have been removed from the distribution. In case
          you care about them and want them back, drop us a note at
          monotone-devel@nongnu.org.

        Bugs fixed

        - 'mtn db kill_rev_locally' did not update the inodeprint